# Auger-CDAS

./: README.md
daq-master/: CMakeLists.txt  README
daq-master/Apps/Eb/: Eb.cc  EbEvent.cc  EbFast.cc  EbMain.cc  T3_uub.h  T3_uub_v264.cc
daq-master/Apps/Fd/: CheckVersion.hh  Fd.cc  SConscript.txt  T3Notify.cc
daq-master/Apps/IkPaX/: DDLManage_IkPaX.pl  Ik.h  IkC.cc  IkC.h  IkClient.cc  IkClient.h  IkMessage.cc  IkMessage.h  IkTCP.cc
daq-master/Apps/IkPaX/ddl/: IkConfigReady.ddl  IkCtRequest.ddl  IkInfo.ddl  IkLsBooted.ddl  IkLsCalReq.ddl  IkLsChangeState.ddl  IkLsConfAck.ddl  IkLsContAck.ddl  IkLsMonReq.ddl  IkLsOS9.ddl  IkLsOS9Ack.ddl  IkLsParamAck.ddl  IkLsPause.ddl  IkLsPauseAck.ddl  IkLsReady.ddl  IkLsRecord.ddl  IkLsStart.ddl  IkRcControlAll.ddl  (+12 more)
daq-master/Apps/Mr/: ADCparam.ddl  CMakeLists.txt  CbRawData.cc  MoRawData.cc  MoSDData.h  MrManager.cc  MrManager.h  MrRoot.cc  MrRoot.h  MrS.cc  MrSignal.h  MrUUBCalibMonit.cc  Mr_ClassDef.h  Mr_LinkDef.h  TSDRd.h  calmon_pack.h
daq-master/Apps/Pm/: Pm.cc  Pm.h  PmClientConnection.h  PmConst.h  PmDefs.cc  PmDefs.h  PmLog.h  PmProtocol.h  PmServices.cc  commandlist.h
daq-master/Apps/Rc/: Rc.h  RcIk.cc
daq-master/Apps/SDDownload/: SDDownload.cc  SDDownload.h  SDDownloadIk.h
daq-master/Apps/Xb/: CMakeLists.txt  Doxyfile  Xb.cc  Xb.h  XbArraySimu.cc  XbCheck.cc  XbCheck.h  XbFast.cc  XbPm.cc  XbPm.h  XbRadioDumpT2.cc  XbT2.h  servers.list
daq-master/Apps/sPMT/: CMakeLists.txt  SPMTData.cc  sPMT_Pm.cc
daq-master/CMakeModules/: FindMySQL.cmake  FindRoot.cmake
daq-master/Offline/IoSd/: CMakeLists.txt  IoSd.cc  IoSdData.cc  IoSdDataLinkDef.h  IoSdFile.h  IoSdMeteo.h  IoSdRootI.h  example.cc
daq-master/Offline/MoIO/: MoIO_MrFile.cc  MoIO_MrFile.h  MoIO_TrFile.cc  TSDMonCal.cc  TSDMonitoring.h  TSDRawMonitoring.cc  TSDRawMonitoring.h
daq-master/Offline/STCoordinates/: LatLong-UTMConversion.h  STCconstants.h  STClibrary.cc  STClibrary.h  TCdasUtil.cc  TSTSky.cc  TSTSky.h  TShowerParams.cc  TShowerParams.h  main.dox
daq-master/Offline/spmtIO/: example.cc  spmtIO.cc  spmtIO.h  spmtIOEvt.cc  spmtIOMuonCalib.cc  spmtIOThreshold.cc
daq-master/Utils/CL/: CL.h  ClFrames.h  PmRead.ph  gpsstatus.h  latlong.h  monitor.h  msg_unpack.cc  run_config.h  slowcontrol.h
daq-master/Utils/CSet/: CAnchor.h  CArray.c  CArray.h  CArray.ph  CCAnchor.cxx  CCAnchor.hxx  CMakeLists.txt  GC.c  GC.h  GCC.hxx  LkList.ph  Reg.c  Reg.h  RegLex.c  RegLex.l  RegParse.h  RegParse.ph  TArray.c
daq-master/Utils/DbC/: DbC.h  DbCArray.cc  DbCArray.h
daq-master/Utils/Gnc/: GncClose.cc  GncCmp.cc  GncError.h  GncLoop.h  GncProcessMessage.cc  GncProcessMessage.h  GncWatch.cc  france
daq-master/Utils/Gs/: CMakeLists.txt  Gs.h  GsClientManager.cc  GsClients.hxx  GsIk.cc  GsIk.h  GsLoop.cc  GsMess.cc  GsNotify.cc  GsProtocol.h  GsServer.h  GsServerThread.cc
daq-master/Utils/Ui/: UiArgs.cc  UiArgs.h  UiCmdLine.cc  UiLst.cc  UiMessage.cc
radio_emu/src/: Makefile  pm_side.c  pm_side.h  protocol.c  protocol.h  su_bsu_emu.c  su_emu.c  ub_side.c  ub_side.h
src/: CMakeLists.txt
src/Apps/Eb/: CMakeLists.txt  Eb.h  EbEvent.h  EbMain.h  EbManager.cc  EbManager.h  T3_uub_v262.cc  T3_uub_v263.cc  t3_pack.h
src/Apps/Fd/: CMakeLists.txt  CdasProtocol.hh  Fd.h  FdTrigger.cc  FdUtilVersion.hh  T3Notify.h  T3NotifyLinkDef.h  T3NotifyStat.cc  T3NotifyStat.hh  test.cc
src/Apps/IkPaX/: CMakeLists.txt  IkCSend.cc  IkServer.cc  IkTCP.h
src/Apps/IkPaX/ddl/: IkBsRecord.ddl  IkDbConfig.ddl  IkDebug.ddl  IkDownloadSummary.ddl  IkFatal.ddl  IkLsConfig.ddl  IkLsCont.ddl  IkLsDownloadAck.ddl  IkLsDownloadCheck.ddl  IkLsError.ddl  IkLsGenMess.ddl  IkLsGpsSet.ddl  IkLsLoadConf.ddl  IkLsLog.ddl  IkLsLogReq.ddl  IkLsParam.ddl  IkLsReboot.ddl  IkLsSaveConf.ddl  IkLsStartAck.ddl  IkLsStop.ddl  IkLsStopAck.ddl  IkLsWakeUp.ddl  IkMoRBookTree.ddl  IkPmMessage.ddl  IkRcControlDone.ddl  IkSDSummary.ddl  IkSevere.ddl  IkSound.ddl  IkSuDbReload.ddl  IkT3.ddl
src/Apps/Mr/: CbRawData.h  MoRawData.h  Mr.cc  MrSClassDef.cc  MrSClassDef.h  MrSMessage.cc  MrSMessage.h  MrSSummaryFile.cc  MrSSummaryFile.h  MrSignal.cc  MrUUBCalibMonit.h  Mr_ClassDef.cc  TSDExtra.h  TSDUSystem.h
src/Apps/Pm/: CMakeLists.txt  PmClientConnection.cc  PmClientConnection.h  PmLSX.h  PmLib.h  PmLog.cc  PmServer.cc  PmServer.h  PmServices.h  crc.h  packet.h
src/Apps/Rc/: AddStation.cc  CMakeLists.txt  MySqlDbQuery.cc  Rc.cc  RcDb.cc  StationsHistory.cc
src/Apps/SDDownload/: CMakeLists.txt  SDDownloadIk.cc  SDDownloadPm.cc  SDDownloadPm.h
src/Apps/Xb/: XbAlgo.cc  XbAlgo.h  XbArray.cc  XbArray.h  XbArrayDb.cc  XbDumpT2.cc  XbIk.cc  XbIk.h
src/Apps/sPMT/: SPMTData.h  SPMTRoot.cc  SPMTRoot.h  sPMT.cc  sPMT_Pm.h  spmt_prot.h
src/CMakeModules/: AugerUtilityMacros.cmake  FindBoost.cmake
src/Offline/IoSd/: IoSd.h  IoSdData.h  IoSdFile.cc  IoSdMeteo.cc  IoSdRootI.cc  counted_ptr.h  main.dox
src/Offline/MoIO/: CMakeLists.txt  MoIO_LinkDef.h  MoIO_TrFile.h  TSDCalibration.cc  TSDCalibration.h  TSDMonCal.h  TSDMonitoring.cc  TSDMonitoring_old.cc  TSDMonitoring_old.h  TSDRawMonitoring_old.cc  TSDRawMonitoring_old.h  TSDSystem.cc  TSDSystem.h
src/Offline/STCoordinates/: CMakeLists.txt  LatLong-UTMConversion.cc  README  TCdasUtil.h
src/Offline/spmtIO/: CMakeLists.txt  spmtIOEvt.h  spmtIOMuonCalib.h  spmtIOThreshold.h  spmt_LinkDef.h
src/Utils/CL/: CMakeLists.txt  PmRead.c  central_local.h  msg_pack_unpack.h
src/Utils/CL/test/: msg_unknown_read.cc  msg_unknown_test.cc
src/Utils/CSet/: CCArray.cxx  CCArray.hxx  CSet.h  GC.ph  GCC.cxx  Hash.c  Hash.h  Hash.ph  LkList.c  LkList.h  LkListP.h  Reg.ph  RegLex.ph  RegParse.c  RegParse.y  TAnchor.c  TAnchor.ph  TArray.ph
src/Utils/DbC/: CMakeLists.txt  test.cc
src/Utils/Gnc/: CMakeLists.txt  Gnc.h  GncClose.h  GncCmp.h  GncInit.cc  GncInit.h  GncLoop.cc  GncRead.cc  GncRead.h  GncWatch.h  GncWrite.cc  GncWrite.h  fndapr
src/Utils/Gs/: GsEndOfLoop.cc  GsInit.cc  GsMess.h  GsNotify.h  GsServices.h  GsThreads.h  GsTools.h  Gsp.h
src/Utils/Ui/: CMakeLists.txt  UiArgsTest.cc  UiCmdLine.h  UiErr.cc  UiErr.h  UiLk.cc  UiLk.h  UiLst.h  UiMessage.h
